# libbalistica

./: .gitignore  .travis.yml  COPYRIGHT  Dockerfile  README.md  meson.build
lib/: Atmosphere.vala  FreeRecoil.vala  Greenhill.vala  LibBalistica.vala  Miller.vala  Pbr.vala  Retard.vala  SectionalDensity.vala  Solution.vala  Solve.vala  Thornhill.vala  Windage.vala  Zero.vala  meson.build
lib/conversion/: Angle.vala  Mass.vala  Temperature.vala
src/: meson.build
test/: AbstractTestCase.vala  ConversionTests.vala  FreeRecoilTests.vala  GreenhillTests.vala  LibBalisticaTests.vala  MillerTests.vala  SectionalDensityTests.vala  TestRunner.vala  meson.build
